refactor: improve worldguard listener